src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Budgets__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>external_name__c</fullName>
        <externalId>true</externalId>
        <label>external name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Department</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>